--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,19 @@ body,
   margin: unset;
 }
 
+#root {
+  display: flex;
+  justify-content: center;
+  background-color: darkgray;
+}
+
+#canvas-container {
+  background-color: lightblue;
+  /* border: 5px solid red; */
+  aspect-ratio: 9 / 16;
+  /* object-fit: contain; */
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
