add images for intro scenes

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,8 @@ body,
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+img {
+  /* pixelated */
+  image-rendering: pixelated;
+}
