--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body,
 #root {
   display: flex;
   justify-content: center;
-  background-color: darkgray;
+  background-color: black;
 }
 
 #canvas-container {
